# JavaCompiler

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  GraphvizWarmup  GraphvizWarmup.cbp  Makefile  README.MD  README.md  cmake_install.cmake  graph.cpp  graph.h  graphviz.sh  main  main.cpp  make_all.sh  out.dot  run.sh  run_all_tests.sh  run_ast_graphviz.sh  run_flex.sh  run_sample.sh  run_sca.sh  run_test.sh  test.sh
Google_tests/: CMakeLists.txt  Google_Tests  Makefile  cmake_install.cmake  test.cpp
Google_tests/lib/: googletest-distribution.cbp
lexer_test/: main.cpp  run_test.sh
lexer_test/correct_answer/: BinarySearch  BinaryTree  BubbleSort  Factorial  LinearSearch  LinkedList  QuickSort  TreeVisitor
output/: .gitignore  a  b  graphviz_output.dot
output/ast_graphs/: readme
output/irt_graphs/: readme
samples/: simple.java
samples/bad_samples/: TC_5a.java  TC_9a.java  simple.java
samples/good_samples/: two_plus_two.java
smart_graphviz/: CMakeLists.txt  Makefile  cmake_install.cmake  graph.cpp  graph.h
src/: .mc_parser.yy.swp  CMakeLists.txt  errors.hpp  lex.yy.cc  lexer.l  main.cpp  mc_driver.cpp  mc_driver.hpp  mc_lexer.l  mc_parser.yy  mc_scanner.hpp  mini_scanner.cpp  mini_scanner.h  utils.cpp  utils.hpp
src/AST/: CMakeLists.txt
src/AST/Expression/: ExpressionBase.cpp  ExpressionBase.h  ExpressionBinaryOp.cpp  ExpressionBinaryOp.h  ExpressionInt.cpp  ExpressionInt.h
src/ast/: CMakeLists.txt  yyltype.cpp  yyltype.hpp
src/ast/handlers/: class.hpp  expressions.hpp  goal.hpp  main_class.hpp  method_body.hpp  method_declaration.hpp  statements.hpp  types.hpp  var_declaration.hpp  visitable.hpp
src/ast/visitors/: .visitor_graphviz.cpp.swp  .visitor_pretty_printer.cpp.swp  .visitor_symbol_table_builder.cpp.swp  ivisitor.cpp  ivisitor.hpp  visitable.hpp  visitor_graphviz.cpp  visitor_graphviz.hpp  visitor_irt_builder.cpp  visitor_irt_builder.hpp  visitor_pretty_printer.cpp  visitor_pretty_printer.hpp  visitor_symbol_table_builder.cpp  visitor_symbol_table_builder.hpp  visitor_type_checker.cpp  visitor_type_checker.h  visitor_typechecker.cpp  visitor_typechecker.hpp
src/irt/: CMakeLists.txt  utils.cpp  utils.hpp
src/irt/handlers/: expression_list.hpp  expressions.hpp  memory.hpp  memory_address.hpp  statement_list.hpp  statements.hpp
src/irt/visitor/: ivisitor.h
src/irt/visitors/: ivisitor.cpp  ivisitor.hpp  visitable.hpp  visitor_graphviz.cpp  visitor_graphviz.hpp  visitor_pretty_printer.cpp  visitor_pretty_printer.hpp
src/irt/wrappers/: wrappers.hpp
src/smart_graphviz/: graph.cpp  graph.h
src/symbol_table/: symbol_table.cpp  symbol_table.hpp
test/: CMakeLists.txt  example_add.cpp
test_samples/samples/: simple.java
tests/BadSamples/: My1.java  TC_13a.java  TC_13b.java  TC_1a.java  TC_2.java  TC_3a(2).java  TC_6a.java
tests/samples/: TreeVisitor.java  my_test.java  simple.java  two_plus_two.java
